RESOLVED FIXED180475
[WPE][GTK] Freeze WebKit version in user agent
https://bugs.webkit.org/show_bug.cgi?id=180475
Summary [WPE][GTK] Freeze WebKit version in user agent
Michael Catanzaro
Reported 2017-12-06 08:42:09 PST
Freeze WebKit version in user agent. Follow up to bug #180365.
Attachments
Patch (3.20 KB, patch)
2017-12-06 09:55 PST, Michael Catanzaro
cgarcia: review+
cgarcia: commit-queue-
Michael Catanzaro
Comment 1 2017-12-06 09:55:35 PST
Michael Catanzaro
Comment 2 2017-12-06 10:14:30 PST
Comment on attachment 328578 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328578&action=review > Source/WebCore/platform/glib/UserAgentGLib.cpp:76 > + return "605.1.15"; Yes, we've been using one fewer version number component than Mac all this time... best align with them.
Carlos Garcia Campos
Comment 3 2017-12-07 01:20:19 PST
Comment on attachment 328578 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328578&action=review > Source/WebCore/ChangeLog:7 > + Please explain here what you are changing and why.
Michael Catanzaro
Comment 4 2017-12-07 07:59:34 PST
Note You need to log in before you can comment on or make changes to this bug.