[WPE][GTK] Freeze WebKit version in user agent https://bugs.webkit.org/show_bug.cgi?id=180475

Reviewed by Carlos Garcia Campos.

.:

* Source/cmake/OptionsGTK.cmake:
* Source/cmake/OptionsWPE.cmake:

Source/WebCore:

Apple has frozen the WebKit version in its user agent, so we should too, at the same point.

* platform/glib/UserAgentGLib.cpp:
(WebCore::versionForUAString):

Canonical link: https://commits.webkit.org/196447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225627 268f45cc-cd09-0410-ab3c-d52691b4dbfc