Source/cmake/OptionsWPE.cmake
@@ -82,8 +82,6 @@ endif ()
 add_definitions(-DBUILDING_WPE__=1)
 add_definitions(-DGETTEXT_PACKAGE="WPE")
 add_definitions(-DDATA_DIR="${CMAKE_INSTALL_DATADIR}")
-add_definitions(-DUSER_AGENT_MAJOR_VERSION="605")
-add_definitions(-DUSER_AGENT_MINOR_VERSION="1")
 
 SET_AND_EXPOSE_TO_BUILD(USE_CAIRO TRUE)
 SET_AND_EXPOSE_TO_BUILD(USE_EGL TRUE)
